<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="OPERATION_Controller" Id="{2c77ea48-d508-49bc-a424-4f74a9e55231}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OPERATION_Controller
VAR
	xTrigger:				BOOL;
	xDone:					BOOL;
	rtControlOn:			R_TRIG;
	fbHOME_RUN:				HOME_RUN_SEQ;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[rtControlOn(CLK:=G_xAutoMode);

IF rtControlOn.Q AND G_xPowerOn AND NOT G_xErrorExist THEN
	xTrigger:=TRUE;
ELSE
	xTrigger:=FALSE;
END_IF

fbHOME_RUN(	xExecute:=xTrigger, xDone:=xDone);]]></ST>
    </Implementation>
    <LineIds Name="OPERATION_Controller">
      <LineId Id="55" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="56" Count="1" />
      <LineId Id="60" Count="1" />
      <LineId Id="58" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="28" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>